// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders correctly with custom background color 1`] = `
<DocumentFragment>
  .cache-1o01xn9 {
  height: 32px;
  width: 32px;
}

.cache-qksesa {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border-radius: 50%;
  color: #FFFFFF;
  font-size: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

<div
    class="cache-1o01xn9 e1frqeh80"
    size="32"
  >
    <span
      class="cache-qksesa e1frqeh82"
    >
      HW
    </span>
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with custom text color 1`] = `
<DocumentFragment>
  .cache-1o01xn9 {
  height: 32px;
  width: 32px;
}

.cache-ob4ny5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #A365F6;
  border-radius: 50%;
  color: #FFFFFF;
  font-size: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

<div
    class="cache-1o01xn9 e1frqeh80"
    size="32"
  >
    <span
      class="cache-ob4ny5 e1frqeh82"
    >
      HW
    </span>
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with default props 1`] = `
<DocumentFragment>
  .cache-1o01xn9 {
  height: 32px;
  width: 32px;
}

.cache-1kzq5ms {
  height: 100%;
  width: 100%;
}

<div
    class="cache-1o01xn9 e1frqeh80"
    size="32"
  >
    <img
      alt=""
      class="cache-1kzq5ms e1frqeh81"
      src="test-file-stub"
    />
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with image 1`] = `
<DocumentFragment>
  .cache-1o01xn9 {
  height: 32px;
  width: 32px;
}

.cache-1kzq5ms {
  height: 100%;
  width: 100%;
}

<div
    class="cache-1o01xn9 e1frqeh80"
    size="32"
  >
    <img
      alt=""
      class="cache-1kzq5ms e1frqeh81"
      src="test-file-stub"
    />
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with lock 1`] = `
<DocumentFragment>
  .cache-1o01xn9 {
  height: 32px;
  width: 32px;
}

.cache-xk1emf {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F6F6F8;
  border-radius: 50%;
  color: #FFFFFF;
  font-size: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

.cache-12jouri {
  fill: #B2B6C3;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-12jouri.cache-12jouri {
  vertical-align: middle;
}

<div
    class="cache-1o01xn9 e1frqeh80"
    size="32"
  >
    <span
      class="cache-xk1emf e1frqeh82"
    >
      <svg
        class="sc-ui-icon etwatq50 cache-12jouri"
        title="Locked"
        viewBox="0 0 24 24"
      >
        <path
          d="M12,17A2,2 0 0,0 14,15C14,13.89 13.1,13 12,13A2,2 0 0,0 10,15A2,2 0 0,0 12,17M18,8A2,2 0 0,1 20,10V20A2,2 0 0,1 18,22H6A2,2 0 0,1 4,20V10C4,8.89 4.9,8 6,8H7V6A5,5 0 0,1 12,1A5,5 0 0,1 17,6V8H18M12,3A3,3 0 0,0 9,6V8H15V6A3,3 0 0,0 12,3Z"
        />
      </svg>
    </span>
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with sentence 1`] = `
<DocumentFragment>
  .cache-1o01xn9 {
  height: 32px;
  width: 32px;
}

.cache-ob4ny5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #A365F6;
  border-radius: 50%;
  color: #FFFFFF;
  font-size: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

<div
    class="cache-1o01xn9 e1frqeh80"
    size="32"
  >
    <span
      class="cache-ob4ny5 e1frqeh82"
    >
      HW
    </span>
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with size 1`] = `
<DocumentFragment>
  .cache-13xg4vd {
  height: 48px;
  width: 48px;
}

.cache-1kzq5ms {
  height: 100%;
  width: 100%;
}

<div
    class="cache-13xg4vd e1frqeh80"
    size="48"
  >
    <img
      alt=""
      class="cache-1kzq5ms e1frqeh81"
      src="test-file-stub"
    />
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with small text 1`] = `
<DocumentFragment>
  .cache-1o01xn9 {
  height: 32px;
  width: 32px;
}

.cache-ob4ny5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #A365F6;
  border-radius: 50%;
  color: #FFFFFF;
  font-size: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

<div
    class="cache-1o01xn9 e1frqeh80"
    size="32"
  >
    <span
      class="cache-ob4ny5 e1frqeh82"
    >
      HW
    </span>
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with text 1`] = `
<DocumentFragment>
  .cache-1o01xn9 {
  height: 32px;
  width: 32px;
}

.cache-ob4ny5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #A365F6;
  border-radius: 50%;
  color: #FFFFFF;
  font-size: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

<div
    class="cache-1o01xn9 e1frqeh80"
    size="32"
  >
    <span
      class="cache-ob4ny5 e1frqeh82"
    >
      HE
    </span>
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with text and custom style 1`] = `
<DocumentFragment>
  .cache-1o01xn9 {
  height: 32px;
  width: 32px;
}

.cache-6jj1vw {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: red;
  border-radius: 50%;
  color: white;
  font-size: 14px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

<div
    class="cache-1o01xn9 e1frqeh80"
    size="32"
  >
    <span
      class="cache-6jj1vw e1frqeh82"
    >
      HW
    </span>
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with text size 1`] = `
<DocumentFragment>
  .cache-7f50zt {
  height: 50px;
  width: 50px;
}

.cache-1v57kvs {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #A365F6;
  border-radius: 50%;
  color: #FFFFFF;
  font-size: 30px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

<div
    class="cache-7f50zt e1frqeh80"
    size="50"
  >
    <span
      class="cache-1v57kvs e1frqeh82"
    >
      HE
    </span>
  </div>
</DocumentFragment>
`;
